# zero-rs

./: .gitignore  Cargo.toml  README.md  UNLICENSE
migrations/00000000000001_zero_initial_setup/: up.sql
src/: db.rs  main.rs  model.rs  schema.rs
templates/: post.html
