[package]
name = "zero"
version = "0.1.0"
authors = ["Celti Burroughs <celti@celti.name>"]
edition = "2018"

[dependencies]
bytes = "0.4"
chrono = "0.4"
data-encoding = "2"
diesel = { version = "1", features = ["chrono", "postgres", "r2d2", "uuid"] }
dotenv = "0.13"
futures = "0.1"
http = "0.1"
hyper = "0.12"
lazy_static = "1"
log = "0.4"
log-panics = "2"
magic = "0.12"
mime = "0.3"
mime_guess = "2.0.0-alpha"
multipart = "0.15"
pretty_env_logger = "0.2"
ring = "0.13"
tokio = "0.1"
warp = "0.1"
